75: Fix spacing issue

--- a/ceres-client/src/components/Dashboard/Dashboard.css
+++ b/ceres-client/src/components/Dashboard/Dashboard.css
@@ -48,18 +48,18 @@
   box-shadow: 5px 5px 13px #ededed, -5px -5px 13px #ffffff;
 }
 
-.title{
+.title {
   font-size: 25px;
   text-align: center;
 }
 
-.heading{
+.heading {
   text-align: center;
   font-size: 20px;
   font-weight: bold;
 }
 
-.align-right{
+.align-right {
   float: right;
 }
 
@@ -67,14 +67,13 @@
   float: left;
 }
 
-.due-content{
+.due-content {
   margin-top: 20px;
 }
 
 .width-40-percent {
   width: 40%;
 }
-
 
 .icon {
   width: 30px;
@@ -169,8 +168,8 @@
 
 .profile-pic {
   border: 2px solid black;
-  height: 40%;
-  width: 40%;
+  /* height: 40%; */
+  /* width: 40%; */
   margin-right: auto;
   margin-left: auto;
 }
@@ -178,7 +177,7 @@
 .employee-paragraph {
   margin-right: auto;
   margin-left: auto;
-  overflow: scroll;
+  /* overflow: scroll; */
   width: 70%;
 }
 
